S8 - Added ping feature.

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,3 @@
 export SLACK_API_TOKEN=<slack_bot_token_goes_here>
 export SLACK_RUBY_BOT_ALIASES=<slack_bot_aliases_go_here>
+export SLACK_PING_TOKEN=<slack_ping_token_goes_here>
